--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@inertiajs/react": "^1.0.11",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ziggy-js": "^1.6.2"
