--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "socialiteproviders/discord": "^4.2",
+        "squirephp/countries-en": "^3.4",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
