--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,5 +30,5 @@ jobs:
           cp .env.ci .env
           php artisan key:generate
 
-      - name: Run Testsuite
-        run: vendor/bin/phpunit tests/
+      - name: Run Test Suites
+        run: php artisan test
